# sof-converter

./: .gitignore  LICENSE  README.md  s1.hs  s2.hs  s3.hs  sof-converter.cabal  sof-converter.hs
